<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#4BB7FC"   
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wealth_value"
            android:layout_marginLeft="5dp"
            android:textSize="30sp"/>
        <TextView 
            android:id="@+id/wealthValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FF9925">
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:text="@string/edit"
        android:textSize="22sp"/>
    <RadioGroup 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <RadioButton 
            android:id="@+id/sh"
            android:onClick="doClick"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"
            android:text="石头"
            android:textSize="18sp"/>
        <RadioButton 
            android:id="@+id/jiandao"
            android:onClick="doClick"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="剪刀"
            android:textSize="18sp"/>
        <RadioButton 
            android:id="@+id/bu"
            android:onClick="doClick"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="布"
            android:textSize="18sp"/>
    </RadioGroup>
    
    <Button 
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#4BB7FC"
        android:text="@string/start"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#fff"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <ImageView 
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/stone"
        />
    </LinearLayout>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/game_rule"
        android:textSize="20sp"/>
  
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/game_rule_detail"
        android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>