<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/result"
        android:gravity="center"
        android:background="#FF9925"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="25sp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#4BB7FC">
    <TextView 
        android:id="@+id/finalResult"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_result"
        android:textSize="30sp"/>
    <TextView
        android:layout_marginTop="20dp" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textSize="20sp"/>

    
     <LinearLayout 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="全局记录:"
        android:textSize="20sp"/>
        <TextView 
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"/>
    </LinearLayout>
     <LinearLayout 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="获胜记录:"
        android:textSize="20sp"/>
        <TextView 
        android:id="@+id/success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"/>
    </LinearLayout>
     <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="失败记录:"
        android:textSize="20sp"/>
        <TextView 
        android:id="@+id/fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"/>
    </LinearLayout>
     <LinearLayout
        android:layout_marginTop="10dp" 
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="平局记录:"
        android:textSize="20sp"/>
        <TextView 
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"/>
    </LinearLayout>

     <Button
         android:id="@+id/ct"
         android:background="#FF9925"
         android:layout_marginTop="40dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="再来一次！！" 
         android:textStyle="bold"
         android:textSize="20sp"
         android:textColor="#fff"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:background="#4BB7FC" 
         android:gravity="center">
     <ImageView 
         android:id="@+id/img_result"
         android:background="@drawable/fail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     </LinearLayout>

</LinearLayout>
